--- a/frontend/coockingDictionary/index.html
+++ b/frontend/coockingDictionary/index.html
@@ -50,20 +50,16 @@
       <div class="row justify-content-center">
         <div class="col-10">
           <h6>
-            Buat resepmu sendiri dan temukan beragam ide resep makanan yang tak terbatas di sini.
+            Temukan arti dari istilah masak untuk menambah pengetahuanmu di sini!
           </h6>
         </div>
       </div>
-      <button type="button" class="btn btn-outline-light">Daging Ayam</button>
-      <button type="button" class="btn btn-outline-light">Telur</button>
-      <button type="button" class="btn btn-outline-light">Panci</button>
-      <button type="button" class="btn btn-outline-light">Tepung</button>
-      <button type="button" class="btn btn-outline-light">Jahe</button>
-      <button type="button" class="btn btn-outline-light">Presto</button>
-      <button type="button" class="btn btn-outline-light">Kukus</button>
-      <button type="button" class="btn btn-outline-light">Grill</button>
-    </div>
+      <div class="container">
+        <div id="bahanMakananList"></div>
+      </div>
+    </div>    
   </div>
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
